# kracked-web

./: .gitignore  Cargo.toml  Dockerfile  docker-compose.yml  nginx.conf  supervisord.conf
certs/: NO7s-cTJoBGm0_XQSXYqtd9MdExCZLU6ZViJbEr52qA
frontend/pages/blog-search/: \.save  blog-search.html  home.html
frontend/pages/blog-search/script/: main.js
frontend/pages/blog-search/style/: blog-search.css  home.css
frontend/pages/error/: error.html
frontend/pages/error/script/: main.js
frontend/pages/home/: \  home.html  index.html
frontend/pages/home/script/: main.js
frontend/pages/home/style/: home.css
frontend/pages/ratelimiter/: ratelimiter.html
frontend/pages/ratelimiter/style/: ratelimiter.css
frontend/templates/blog/: blog.html
frontend/templates/blog-card/: blog-card.html
frontend/templates/blog/style/: blog.css
src/: main.rs
src/Application/: AppRouter.rs  mod.rs
src/Application/AppRouter/handlers/: mod.rs
src/Application/AppRouter/handlers/handler/: blog.rs  blog_search.rs  fallback.rs  helper_funcs.rs  home.rs  mod.rs  ratelimiter.rs
src/Application/AppRouter/handlers/handler/error/: app_error.rs  home_error.rs  mod.rs  page_error.rs
src/Application/AppRouter/handlers/handler/state/: AppState.rs
