[package]
name = "kracked-web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = "0.14"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
tower = "0.4.13"
axum = {version = "0.6.18"}
serde_json = "1.0"
serde = "*"
sqlx = { version = "0.7", features = [ "runtime-tokio", "postgres"] }
tower-http = {version = "0.4.1", features = ["fs", "tracing", "trace"]}
axum_static = "1.2.1"
tower_governor = "0.0.4"
walkdir = "*"